argocd/airbnb-dev/airbnb-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbnb-server
  labels:
    app: airbnb-server
spec:
  replicas: 0
  selector:
    matchLabels:
      app: airbnb-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  revisionHistoryLimit: 4
  template:
    metadata:
      labels:
        app: airbnb-server
    spec:
      serviceAccountName: airbnb-server-dev
      nodeSelector:
        kubernetes.io/arch: arm64
      containers:
        - image: yny.ocir.io/ax1dvc8vmenm/airbnb-dev/airbnb-server:1
          name: airbnb-server
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 512Mi
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /check
              port: 8080
          readinessProbe:
            httpGet:
              path: /check
              port: 8080
            timeoutSeconds: 3
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /check
              port: 8080
            failureThreshold: 20
---
apiVersion: v1
kind: Service
metadata:
  name: airbnb-server
spec:
  type: ClusterIP
  selector:
    app: airbnb-server
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: airbnb-server
spec:
  gateways:
    - istio-ingress/waffle-ingressgateway
    - mesh
  hosts:
    - airbnb-api-dev.wafflestudio.com
  http:
    - route:
        - destination:
            host: airbnb-server
